parser.output
   0  $accept : %entry% $end

   1  toplevel : VDASH formula PERIOD
   2           | formula_list VDASH formula PERIOD

   3  formula_list : formula COMMA formula_list
   4               | formula

   5  formula : formula_or IF formula
   6          | formula_or

   7  formula_or : formula_and OR formula_or
   8             | formula_and

   9  formula_and : formula_not AND formula_and
  10              | formula_not

  11  formula_not : NOT formula_atomic
  12              | formula_atomic

  13  formula_atomic : ID
  14                 | LPAR formula RPAR

  15  %entry% : '\001' toplevel

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . toplevel  (15)

	ID  shift 3
	LPAR  shift 4
	VDASH  shift 5
	NOT  shift 6
	.  error

	toplevel  goto 7
	formula  goto 8
	formula_list  goto 9
	formula_or  goto 10
	formula_and  goto 11
	formula_not  goto 12
	formula_atomic  goto 13


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	formula_atomic : ID .  (13)

	.  reduce 13


state 4
	formula_atomic : LPAR . formula RPAR  (14)

	ID  shift 3
	LPAR  shift 4
	NOT  shift 6
	.  error

	formula  goto 14
	formula_or  goto 10
	formula_and  goto 11
	formula_not  goto 12
	formula_atomic  goto 13


state 5
	toplevel : VDASH . formula PERIOD  (1)

	ID  shift 3
	LPAR  shift 4
	NOT  shift 6
	.  error

	formula  goto 15
	formula_or  goto 10
	formula_and  goto 11
	formula_not  goto 12
	formula_atomic  goto 13


state 6
	formula_not : NOT . formula_atomic  (11)

	ID  shift 3
	LPAR  shift 4
	.  error

	formula_atomic  goto 16


state 7
	%entry% : '\001' toplevel .  (15)

	.  reduce 15


state 8
	formula_list : formula . COMMA formula_list  (3)
	formula_list : formula .  (4)

	COMMA  shift 17
	VDASH  reduce 4


state 9
	toplevel : formula_list . VDASH formula PERIOD  (2)

	VDASH  shift 18
	.  error


state 10
	formula : formula_or . IF formula  (5)
	formula : formula_or .  (6)

	IF  shift 19
	RPAR  reduce 6
	COMMA  reduce 6
	PERIOD  reduce 6
	VDASH  reduce 6


state 11
	formula_or : formula_and . OR formula_or  (7)
	formula_or : formula_and .  (8)

	OR  shift 20
	RPAR  reduce 8
	COMMA  reduce 8
	PERIOD  reduce 8
	VDASH  reduce 8
	IF  reduce 8


state 12
	formula_and : formula_not . AND formula_and  (9)
	formula_and : formula_not .  (10)

	AND  shift 21
	RPAR  reduce 10
	COMMA  reduce 10
	PERIOD  reduce 10
	VDASH  reduce 10
	OR  reduce 10
	IF  reduce 10


state 13
	formula_not : formula_atomic .  (12)

	.  reduce 12


state 14
	formula_atomic : LPAR formula . RPAR  (14)

	RPAR  shift 22
	.  error


state 15
	toplevel : VDASH formula . PERIOD  (1)

	PERIOD  shift 23
	.  error


state 16
	formula_not : NOT formula_atomic .  (11)

	.  reduce 11


state 17
	formula_list : formula COMMA . formula_list  (3)

	ID  shift 3
	LPAR  shift 4
	NOT  shift 6
	.  error

	formula  goto 8
	formula_list  goto 24
	formula_or  goto 10
	formula_and  goto 11
	formula_not  goto 12
	formula_atomic  goto 13


state 18
	toplevel : formula_list VDASH . formula PERIOD  (2)

	ID  shift 3
	LPAR  shift 4
	NOT  shift 6
	.  error

	formula  goto 25
	formula_or  goto 10
	formula_and  goto 11
	formula_not  goto 12
	formula_atomic  goto 13


state 19
	formula : formula_or IF . formula  (5)

	ID  shift 3
	LPAR  shift 4
	NOT  shift 6
	.  error

	formula  goto 26
	formula_or  goto 10
	formula_and  goto 11
	formula_not  goto 12
	formula_atomic  goto 13


state 20
	formula_or : formula_and OR . formula_or  (7)

	ID  shift 3
	LPAR  shift 4
	NOT  shift 6
	.  error

	formula_or  goto 27
	formula_and  goto 11
	formula_not  goto 12
	formula_atomic  goto 13


state 21
	formula_and : formula_not AND . formula_and  (9)

	ID  shift 3
	LPAR  shift 4
	NOT  shift 6
	.  error

	formula_and  goto 28
	formula_not  goto 12
	formula_atomic  goto 13


state 22
	formula_atomic : LPAR formula RPAR .  (14)

	.  reduce 14


state 23
	toplevel : VDASH formula PERIOD .  (1)

	.  reduce 1


state 24
	formula_list : formula COMMA formula_list .  (3)

	.  reduce 3


state 25
	toplevel : formula_list VDASH formula . PERIOD  (2)

	PERIOD  shift 29
	.  error


state 26
	formula : formula_or IF formula .  (5)

	.  reduce 5


state 27
	formula_or : formula_and OR formula_or .  (7)

	.  reduce 7


state 28
	formula_and : formula_not AND formula_and .  (9)

	.  reduce 9


state 29
	toplevel : formula_list VDASH formula PERIOD .  (2)

	.  reduce 2


13 terminals, 9 nonterminals
16 grammar rules, 30 states
